tests/ui/types/undefined_type.ko
//@ compile-fail
//@ error-code: E0200
module undefined_type {
    meta { purpose: "Uses an undefined type" }

    fn main() {
        let x: Strin = "hello"  //~ ERROR E0200
    }
}
